<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.efcompany.nottitranquille.AdvancedSearchActivity">

    <!-- Server progress -->
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchProgress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etNation"
                android:hint="@string/strNation"
                android:layout_weight="0.5" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etCity"
                android:hint="@string/strCity"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="149dp"
                android:id="@+id/dpCheckIn"
                android:hint="@string/strCheckIn"
                android:layout_weight="0.5" />

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="149dp"
                android:id="@+id/dpCheckOut"
                android:hint="@string/strCheckOut" />
        </LinearLayout>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spPriceRange" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spLocationType" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spMaxTenants" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strWiFi"
                android:id="@+id/cbWiFi" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strAirConditioner"
                android:id="@+id/cbAirConditioner" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strStrongBox"
                android:id="@+id/cbStrongBox" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bAdvSearch"
                android:id="@+id/bAdvSearch"
                android:layout_weight="0.5" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bSearch"
                android:id="@+id/bSearch"
                android:layout_weight="0.5" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
