<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bSearch"
        android:id="@+id/bSearch"
        android:layout_marginBottom="42dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bAdvSearch"
        android:id="@+id/bAdvSearch"
        android:layout_marginBottom="42dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bRandomSearch"
        android:id="@+id/bRandomSearch" />
</LinearLayout>
